# theme_numerologie_docx

./: .gitignore  Cargo.toml  Secrets.yaml.TOFILL  build_ios_xcframework.sh  build_to_swift_package.sh  nouveau.docx  setup.sh
exemples/: selection.rs
include/: RustBridge.h  theme_numerologie_docx.h
input/: numerologie.docx
output/examples/: convert.sh  image_inline.docx
output/import/: nouveau.docx
src/: lib.rs  main.rs  password.rs  prepare_docx.rs  prepare_selection.rs  tools.rs
src/api/: auth.rs  lame_majeures.rs  mod.rs  numerologie.rs  trait_selection.rs
src/core_docx/: core_docx.rs  mod.rs  parse_to_docx.rs
src/html_tools/: clean_html.rs  mod.rs
