[package]
name = "theme_numerologie_docx"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = "0.4.18"
zip = "0.6.6"
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.143"