[package]
name = "theme_numerologie_docx"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = "0.4.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.143"
libc = "0.2.175"
base64 = "0.22.1"
image = "0.24.9"
error = "0.1.9"
log = "0.4.28"

[lib]
name = "theme_numerologie_docx"
crate-type = ["staticlib"]