[package]
name = "theme_numerologie_docx"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = "0.4.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
serde_json = "1.0.143"
libc = "0.2.175"
base64 = "0.22.1"
image = "0.24.9"
error = "0.1.9"
log = "0.4.28"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.11.2"
scraper = "0.24.0"
bytes = "1.10.1"
strum = "0.27.2"
strum_macros = "0.27.2"

[lib]
name = "theme_numerologie_docx"
crate-type = ["staticlib"]